# text2midi

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SUPPORT.md  main.py  main_tui.py  pyproject.toml  requirements.txt  ui.py
.archive/: ANALYSIS_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETION_SUMMARY.md  DELIVERABLES.md  DELIVERY_COMPLETE.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  DURATION_GUIDE.md  FINAL_STATUS_REPORT.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FIXES_SUMMARY.md  IMPORT_FIXES_VERIFICATION.md  IMPROVEMENTS_MADE.md  INTELLIGENT_AGENT_GUIDE.md  INTELLIGENT_AGENT_IMPLEMENTATION.md  LANGGRAPH_INDEX.md  LANGGRAPH_MIGRATION_FINAL.md  LANGGRAPH_README.md  LANGGRAPH_STATE_FLOW.md  LANGGRAPH_SUMMARY.md  LLM_CONFIG_GUIDE.md  MASTER_IMPLEMENTATION_PLAN.md  MENU_DEMO.txt  MIDITGEN_USP_SHOWCASE.md  MIDI_AGENT_UPGRADE.md  MIDI_GENERATION_IMPROVEMENTS.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  POETRY_COMPLETE.md  POETRY_DONE.md  POETRY_MIGRATION.md  POETRY_MIGRATION_COMPLETE.md  POETRY_SUMMARY.md  QUICKSTART_LANGGRAPH.md  QUICK_NAVIGATION.md  QUICK_REFERENCE.md  REFACTORING.md  REFACTORING_COMPLETE.md  (+23 more)
docs/: ARCHITECTURE.md  DAW_ABLETON_LIVE.md  DAW_SURGE_XT.md  DOCUMENTATION_HUB.md  GETTING_STARTED.md  MIDI_GENERATION_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART_MIDIGEN.md  README.md  SECURITY.md  TRACK_TYPES_REFERENCE.md
docs/music-knowledge-base/: CHORD_PROGRESSIONS_LIBRARY.md  GENRE_TAXONOMY.md  IMPLEMENTATION_PLAN.md  INSTRUMENT_PALETTES.md  PRESET_PROMPTS_LIBRARY.md  README.md  RHYTHM_PATTERNS_LIBRARY.md  SCALES_AND_MODES.md  WORLD_MUSIC_BY_COUNTRY.md
docs/plans/: ONE_TOUCH_INSTALLER_PLAN.md  PLAN-001-MODERN-TUI.md  PLAN-002-VST3-PLUGIN.md  PLAN-003-INTENT-PARSING-ENGINE.md  PLAN-004-TUI-MODERNIZATION.md  PLAN-005-DYNAMIC-PRESETS.md  PLAN-UNIVERSAL-LLM-SETUP.md  Plan-tui-compact-ui.md  Plan-tui.md  README.md  REFACTORING_PLAN.md
docs/specs/: README.md  SPEC-001-MODERN-TUI.md  SPEC-002-VST3-PLUGIN.md  SPEC-005-DYNAMIC-PRESETS.md
docs/tasks/: README.md  TASKS-001-MODERN-TUI.md  TASKS-002-VST3-PLUGIN.md  TASKS-005-DYNAMIC-PRESETS.md
installer/: README.md  build_launcher.py  checksums.json  generate_icon.py  install.bat  install.sh  install_vst.bat  install_vst.sh
memory/skills/: README.md
plans/: intelligent-music-generation-plan.md  midi-duration-intent-plan.md  midigent-v2-agentic-generation-plan.md  v2-implementation-plan.md  variation-fix-plan.md
specs/: intelligent-music-generation-spec.md  midi-duration-intent-spec.md  midigent-v2-agentic-generation-spec.md  v2-dynamic-tracks-multi-turn.md  variation-improvement-spec.md
src/agents/: MIGRATION.md  (+12 more)
tasks/: midi-duration-intent-tasks.md
tests/: test_genre_registry.py  test_intent_engine.py  test_preset_service.py  test_tui_integration_live.py
vst-plugin/: .gitignore  BUILDING.md  CMakeLists.txt  README.md
vst-plugin/assets/: logo.png.txt  screenshot.png.txt
vst-plugin/installer/windows/: icon.ico.txt  text2midi_setup.iss
vst-plugin/python-backend/: build_backend.py  requirements.txt  server.py  test_server.py
vst-plugin/source/: ApiKeyPanel.cpp  ApiKeyPanel.h  BackendLauncher.cpp  BackendLauncher.h  DraggableMidiFile.cpp  DraggableMidiFile.h  GenrePresetPanel.cpp  GenrePresetPanel.h  HttpClient.cpp  HttpClient.h  OutputPanel.cpp  OutputPanel.h  PluginConfig.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ProgressPanel.cpp  ProgressPanel.h  PromptPanel.cpp  PromptPanel.h
(+88 files in other folders)
