[project]
name = "text2midi"
version = "0.1.0"
description = "text2midi - AI-powered MIDI composer. Generate professional multi-track MIDI compositions from text descriptions using LLMs."
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "text2midi Contributors" }
]
keywords = ["midi", "music-generation", "ai", "llm", "music-composition", "text-to-music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

dependencies = [
    # Specify CLI dependencies
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
    # TUI dependencies
    "textual>=0.80.0",
    # MidiGen dependencies
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
    "litellm>=1.30.0",
    "mido>=1.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "textual-dev>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/spark-studio/text2midi"
Documentation = "https://github.com/spark-studio/text2midi#documentation"
Repository = "https://github.com/spark-studio/text2midi.git"
Issues = "https://github.com/spark-studio/text2midi/issues"

[project.scripts]
text2midi = "main:main"
text2midi-tui = "main_tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
package-mode = false

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/agents", "src/config", "src/analysis", "src/tui", "src/intent", "src/experimental", "src/generation", "src/services"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"main_tui.py" = "main_tui.py"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
